--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ table {
     table-layout: fixed;
     border-collapse: collapse;
     text-align: center;
+    border-width: 20px;
 }
 table thead tr th {
     background-color: #3399ff;
